# CUrnel

./: CMakeLists.txt  README.md
include/: 4DMotionDeformable.cuh  cutil_math.h  deformationfield.cuh  field.cuh  image.cuh  image2.cuh
src/: deformationfield.cu  image.cu  main.cu
tools/: CreateKernel.py  GenerateCode.py  GenerateCodeRegistration.py  GenerateCudaCode.py  VectorFunctions.py
